# Anticipez-_les_besoins_en_consommation_de_b-timents

./: .gitignore  README.md  bentofile.yaml  docker-compose.yml  pyproject.toml  requirement.txt  requirements.txt  save_model.py  service.py  template_modelistation_supervisee.ipynb
.ipynb_checkpoints/: template_modelistation_supervisee-checkpoint.ipynb
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat
