[project]
name = "anticipez-besoins-conso-batiments"
version = "0.1.0"
description = "Prediction consommation batiment"
authors = [
    { name = "Antoine Noël", email = "noelantoine974@outlook.fr" }
]
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "bentoml>=1.4.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "pydantic>=2.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
